Fixed items overflow problem

--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,7 @@ html {
 .list-holder {
   padding: 15px 0px 25px 0px;
   width: 780px;
+  height: 100%;
   #list-maker {
     margin-top: 15px;
     display: grid;
@@ -77,7 +78,7 @@ html {
 }
 
 #item-lists {
-  height: 480px;
+  height: 720px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -102,7 +103,7 @@ html {
   top: 0; /* Stay at the top */
   left: 0;
   overflow-x: hidden; /* Disable horizontal scroll */
-  overflow-y: auto;
+  // overflow-y: auto;
   padding-top: 20px; /* Place content 60px from the top */
   padding-bottom: 20px;
   margin-left: 12px;
@@ -112,6 +113,11 @@ html {
   }
   .form-control {
     color: black;
+  }
+  .items-list {
+    height: 70%;
+    overflow-y: scroll;
+    margin-bottom: 5px;
   }
 }
 
